USER = @USER@
GROUP = @GROUP@

prefix = @prefix@
pkgdata_DATA = concept.ini services.ini
EXTRA_DIST = $(pkgdata_DATA)
MANTAINERCLEANFILES = $(pkgdata_DATA)
PKGDIR = @prefix@/etc
pkgdatadir = @prefix@/etc

#pkgdatadir = @pkgdatadir@
#$(prefix)/share/Concept

#install:
#	mkdir -p $DEST_DIR
#	chown $(USER) $(DEST_DIR)
#	chgrp $(GROUP) $(DEST_DIR)
#	chmod 755 $(DEST_DIR)
#	cp loading.gif $(DEST_DIR)/loading.gif
#	cp splash.jpg $(DEST_DIR)/splash.jpg
